Skill panel & chart panel no longer stretch (for mobile performance)

--- a/frontend/css/App.css
+++ b/frontend/css/App.css
@@ -41,14 +41,17 @@ body{
   max-width: 100%;
 
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
 /* ---Top left logo image--- */
 
+
+
 #logo-image-container{
-  display: none;
+  display: block;
+  position: absolute;
   margin: 0.1rem;
 
   height: 5rem;
@@ -58,7 +61,16 @@ body{
   background-color: #ffffff38;
 
   opacity: 45%;
+
+  bottom: 0%;
 }
+
+@media  screen and (max-width: 1300px) {
+  #logo-image-container{
+    display: none;
+  }
+}
+
 #logo-image{
   position: relative;
   max-width: 94%;
