--- a/frontend/css/ChartPanel.css
+++ b/frontend/css/ChartPanel.css
@@ -8,8 +8,7 @@
   bottom: 0%;
   height: 100vh;
   
-  width: 0%;
-  flex: 1;
+  width: clamp(1200px, 80%, 100%);
   text-align: left;
 
   flex-wrap: nowrap;
@@ -18,7 +17,7 @@
 #top-charts-panel{
   position: relative;
   display: inline-flex;
-  width: 100%;
+  max-width: 100%;
   
   flex-wrap: wrap;
   height: 50vh;
@@ -44,6 +43,7 @@
 @media screen and (max-width: 1200px) {
   #ChartPanel{
     overflow: scroll;
+
   }
 
   .SalaryDistributionChart{
